...
            android:src="@drawable/ic_close"
            app:tint="?android:attr/textColorPrimary" />
    </RelativeLayout>

    <!-- LISTA DE OPCIONES -->
    <TextView
        android:id="@+id/option_filter_previstas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingVertical="12dp"
        android:text="Reservas previstas"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/option_filter_vigentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingVertical="12dp"
        android:text="Reservas vigentes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/option_filter_caducadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingVertical="12dp"
        android:text="Reservas caducadas"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/option_filter_todas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingVertical="12dp"
...
