...
        android:id="@+id/toggleGroupQuads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/sort_matricula">

        <!-- BOTÓN 1: MATRÍCULA -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort_matricula"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
...
            android:padding="0dp"
            app:strokeColor="@color/colorBtnEdit"
            android:textColor="@color/black"/>

        <!-- BOTÓN 2: TIPO -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort_tipo"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TIPO"
            android:textSize="10sp"
            android:padding="0dp"
            app:strokeColor="@color/colorBtnEdit"
            android:textColor="@color/black"/>

        <!-- BOTÓN 3: PRECIO -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort_precio"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PRECIO"
            android:textSize="10sp"
...
            android:textColor="@color/black"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- LISTA (RecyclerView) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:clipToPadding="false"
        tools:listitem="@layout/recyclerview_item" />
...
